# vbucketmigrator

./: .gitignore  Makefile.am  build15to163.sh  configure.ac  vbm15to163.spec.in
docs/: vbucketmigrator.pod
m4/: pandora_warnings.m4
src/: backoff.cc  backoff.h  binarymessage.h  binarymessagepipe.cc  binarymessagepipe.h  buckets.cc  buckets.h  config_helper.h  isasl.c  isasl.h  messagequeue.h  moveit.c  mutex.h  mutex_pthread.cc  mutex_win32.cc  port_adaptor.c  sockstream.cc  sockstream.h  vbucketmigrator.cc  winsock.cc
test/: buckets.cc
